--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="HTML, CSS, JavaScript">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" type="imagen/png" href="images/favicon.ico">
+	<link rel="icon" type="imagen/png" href="https://raw.githubusercontent.com/AliAAP/clase1septiembre/master/favicon.ico">
 
 </head>
 <body bgcolor="cyan">
